atualização de links

--- a/categorias.html
+++ b/categorias.html
@@ -23,128 +23,82 @@
     <!-- Start Header -->
 
     <header class="l-header creative-layout">
-      <div class="top-bar-container contain-to-grid sticky">
-        <nav class="top-bar" data-topbar="">
-          <ul class="title-area">
-            <li class="name">
-              <h1>
-                <a title="Flooring Company WordPress Theme" rel="home" href="index.html">
-                  <img alt="logo" width="auto" height="auto" src="images/logo/logo alfa suportel .png">
-                </a>
-              </h1>
-            </li>
-            <li class="toggle-topbar menu-icon">
-              <a href="#"><span>Menu</span></a>
-            </li>
-          </ul>
-          <section class="creative top-bar-section right">
-          <div class="menu-main-menu-container">
+    <div class="top-bar-container contain-to-grid sticky">
+      <nav class="top-bar" data-topbar="">
+        <ul class="title-area">
+          <li class="name">
+            <h1>
+              <a title="alfasuportel" rel="home" href="index.html" pa>
+                <img alt="logo" width="auto" height="auto" src="images/logo/logo alfa suportel .png">
+              </a>
+            </h1>
+          </li>
+          <li class="toggle-topbar menu-icon">
+            <a href="#"><span>Menu</span></a>
+          </li>
+        </ul>
+        <section class="creative top-bar-section right">
+          <div class="menu-main-menu-container">  
             <ul id="menu-main-menu" class="menu">
               <li id="menu-item-1299" class="has-dropdown not-click">
-                  <a href="#" class="has-icon">PRODUTOS</a>
-                  <ul class="sub-menu dropdown">
-                    <li class="title back js-generated"><h5><a href="javascript:void(0)">Voltar</a></h5></li><li class="parent-link hide-for-medium-up"><a class="parent-link js-generated" href="#">Catalogo</a></li>
-                    <li id="menu-item-1300" class="has-dropdown not-click">
-                      <a href="subcategoria.html" class="has-icon">ALFASUPORTEL</a>
-                      <ul class="sub-menu dropdown"><li class="title back js-generated"><h5><a href="javascript:void(0)">Back</a></h5></li><li class="parent-link hide-for-medium-up"><a class="parent-link js-generated" href="#">Estilo I</a></li>
-                        <li id="menu-item-1317">
-                          <a href="portfolio-columns.html" class="has-icon">Catalogo Colunas</a>
-                        </li>
-                        <li id="menu-item-1316">
-                          <a href="portfolio-three-columns.html" class="has-icon">Catalogo 3 Colunas</a>
-                        </li>
-                        <li id="menu-item-1315">
-                          <a href="portfolio-two.html" class="has-icon">Catalogo 2 Columns</a>
-                        </li>
+                <a href="linhasdeprodutos.html" class="has-icon">LINHA DE PRODUTOS</a>
+                <ul class="sub-menu dropdown">
+                  <li class="title back js-generated"><h5><a href="javascript:void(0)">Voltar</a></h5></li><li class="parent-link hide-for-medium-up"><a class="parent-link js-generated" href="catalogo.html">Catalogo</a></li>
+                  <li id="menu-item-1300" class="has-dropdown not-click">
+                    <a href="subcategoria.html" class="has-icon">ALFASUPORTEL</a>
+                    <ul class="sub-menu dropdown"><li class="title back js-generated"><h5><a href="javascript:void(0)">Back</a></h5></li><li class="parent-link hide-for-medium-up"><a class="parent-link js-generated" href="#">Estilo I</a></li>
+                      <li id="menu-item-1316">
+                        <a href="categoria.html" class="has-icon">CATEGORIAS</a>
+                      </li>
+                      <li id="menu-item-1316">
+                        <ul class="sub-menu dropdown"><li class="title back js-generated"><h5><a href="javascript:void(0)">Back</a></h5>
+                        </li>                    
+                        <a href="categoria.html" class="has-icon">CATEGORIAS</a>
                       </ul>
                     </li>
-                    <li id="menu-item-1301" class="has-dropdown not-click">
-                      <a href="#" class="has-icon">GRELHAS</a>
-                      <ul class="sub-menu dropdown">
-                        <li class="title back js-generated">
-                          <h5>
-                            <a href="javascript:void(0)">Back</a>
-                          </h5>
-                        </li>
-                        <li class="parent-link hide-for-medium-up"><a class="parent-link js-generated" href="#">Estilo II</a></li>
-                        <li id="menu-item-1319">
-                          <a href="portfolio-style-ii-two-columns.html" class="has-icon">Catalogo Estilo II  Colunas</a>
-                        </li>
-                        <li id="menu-item-1320">
-                          <a href="portfolio-style-ii-three-columns.html" class="has-icon">Catalogo Estilo II 3 Colunas</a>
-                        </li>
-                        <li id="menu-item-1321">
-                          <a href="portfolio-style-2-four-columns.html" class="has-icon">Catalogo Estilo II 4 Colunas</a>
-                        </li>
-                      </ul>
-                    </li>
-                    <li id="menu-item-1302" class="has-dropdown not-click">
-                      <a href="#" class="has-icon">ESPETO</a>
-                      <ul class="sub-menu dropdown "><li class="title back js-generated"><h5><a href="javascript:void(0)">Back</a></h5></li><li class="parent-link hide-for-medium-up"><a class="parent-link js-generated" href="#"> Catalogo unico</a></li>
-                        <li id="menu-item-1303">
-                          <a href="single-portfolio.html" class="has-icon">Catalogo unico</a>
-                        </li>
-                      </ul>
-                    </li>
-                    <li id="menu-item-1302" class="has-dropdown not-click">
-                      <a href="#" class="has-icon">FRIGIDEIRA A GAS</a>
-                      <ul class="sub-menu dropdown "><li class="title back js-generated"><h5><a href="javascript:void(0)">Back</a></h5></li><li class="parent-link hide-for-medium-up"><a class="parent-link js-generated" href="#"> Catalogo unico</a></li>
-                        <li id="menu-item-1303">
-                          <a href="single-portfolio.html" class="has-icon">Catalogo unico</a>
-                        </li>
-                      </ul>
-                    </li>
-                    <li id="menu-item-1302" class="has-dropdown not-click">
-                      <a href="#" class="has-icon">CHAPEIRA</a>
-                      <ul class="sub-menu dropdown "><li class="title back js-generated"><h5><a href="javascript:void(0)">Back</a></h5></li><li class="parent-link hide-for-medium-up"><a class="parent-link js-generated" href="#"> Catalogo unico</a></li>
-                        <li id="menu-item-1303">
-                          <a href="single-portfolio.html" class="has-icon">Catalogo unico</a>
-                        </li>
-                      </ul>
-                    </li>
-                    <li id="menu-item-1302" class="has-dropdown not-click">
-                      <a href="#" class="has-icon">GRILLS</a>
-                      <ul class="sub-menu dropdown "><li class="title back js-generated"><h5><a href="javascript:void(0)">Back</a></h5></li><li class="parent-link hide-for-medium-up"><a class="parent-link js-generated" href="#"> Catalogo unico</a></li>
-                        <li id="menu-item-1303">
-                          <a href="single-portfolio.html" class="has-icon">Catalogo unico</a>
-                        </li>
-                      </ul>
-                    </li>
-                    <li id="menu-item-1302" class="has-dropdown not-click">
-                      <a href="#" class="has-icon">FOGÕES</a>
-                      <ul class="sub-menu dropdown "><li class="title back js-generated"><h5><a href="javascript:void(0)">Back</a></h5></li><li class="parent-link hide-for-medium-up"><a class="parent-link js-generated" href="#"> Catalogo unico</a></li>
-                        <li id="menu-item-1303">
-                          <a href="single-portfolio.html" class="has-icon">Catalogo unico</a>
-                        </li>
-                      </ul>
-                    </li>
-                  </ul>
-                </li>
-              <li id="menu-item-1295" class="has-dropdown not-click">
-                <a href="#" class="has-icon">PAGINAS</a>
-                <ul class="sub-menu dropdown"><li class="title back js-generated"><h5><a href="javascript:void(0)">Voltar</a></h5></li><li class="parent-link hide-for-medium-up"><a class="parent-link js-generated" href="#">PAGINAS</a></li>
-                  <li id="menu-item-1309">
-                    <a href="about-us.html" class="has-icon">QUEM SOMOS</a>
-                  </li>
-                  <li id="menu-item-1308">
-                    <a href="contact.html" class="has-icon">CONTATOS</a>
-                  </li>
-                </ul>
-                
-              </li>
-              <li id="menu-item-1308">
-                <a href="contact.html" class="has-icon">CONTATOS</a>
-              </li>
-              <li id="menu-item-1308">
-                <a href="contact.html" class="has-icon">TRABALHE CONOSCO</a>
-              </li>              
             </ul>
-          </div>
-        </section>
-        </nav>
-      </div>
-    </header>
+        </li>
+        <li id="menu-item-1301" class="has-dropdown not-click">
+          <a href="subcategoria.html" class="has-icon">FULCAN</a>
+          <ul class="sub-menu dropdown">
+            <li class="title back js-generated">
+              <h5>
+                <a href="javascript:void(0)">Back</a>
+              </h5>
+            </li>
+            <li class="parent-link hide-for-medium-up"><a class="parent-link js-generated" href="catalogo.html">Estilo II</a></li>
+            <li id="menu-item-1319">
+              <a href="categoria.html" class="" ass="has-icon">CATEGORIAS</a>
+            </li>
+          </ul>
+        </li>
 
+      </ul>
+    </li>
+    <li id="menu-item-1295" class="has-dropdown not-click">
+      <a href="catalogo.html" class="has-icon">PAGINAS</a>
+      <ul class="sub-menu dropdown"><li class="title back js-generated"><h5><a href="javascript:void(0)">Voltar</a></h5></li><li class="parent-link hide-for-medium-up"><a class="parent-link js-generated" href="catalogo.html">PAGINAS</a></li>
+        <li id="menu-item-1309">
+          <a href="about-us.html" class="has-icon">QUEM SOMOS</a>
+        </li>
+        <li id="menu-item-1308">
+          <a href="contact.html" class="has-icon">CONTATOS</a>
+        </li>
+      </ul>
+
+    </li>
+    <li id="menu-item-1308">
+      <a href="contact.html" class="has-icon">CONTATOS</a>
+    </li>
+    <li id="menu-item-1308">
+      <a href="contact.html" class="has-icon">TRABALHE CONOSCO</a>
+    </li>              
+  </ul>
+</div>
+</section>
+</nav>
+</div>
+</header>
     <!-- End Header -->
 
     <!-- Start Title Bar -->
