--- a/index.html
+++ b/index.html
@@ -52,40 +52,15 @@
                     <a href="subcategoria.html" class="has-icon">ALFASUPORTEL</a>
                     <ul class="sub-menu dropdown"><li class="title back js-generated"><h5><a href="javascript:void(0)">Back</a></h5></li><li class="parent-link hide-for-medium-up"><a class="parent-link js-generated" href="#">Estilo I</a></li>
                       <li id="menu-item-1316">
-                        <a href="categoria.html" class="has-icon">ASPECT II</a>
+                        <a href="categoria.html" class="has-icon">CATEGORIAS</a>
                       </li>
                       <li id="menu-item-1316">
                         <ul class="sub-menu dropdown"><li class="title back js-generated"><h5><a href="javascript:void(0)">Back</a></h5>
                         </li>                    
-                        <a href="categoria.html" class="has-icon">ASPECT III</a>
+                        <a href="categoria.html" class="has-icon">CATEGORIAS</a>
                       </ul>
                     </li>
-                    <li id="menu-item-1315">
-                      <a href="categoria.html" class="has-icon">BRASIL570</a>
-                    </li>
-                    <li id="menu-item-1315">
-                      <a href="categoria.html" class="has-icon">CARVÃO A BAFO PÉ ALTO</a>
-                    </li>
-                    <li id="menu-item-1315">
-                      <a href="categoria.html" class="has-icon">ESPETINHO</a>
-                    </li>
-                  </li>
-                  <li id="menu-item-1315">
-                    <a href="categoria.html" class="has-icon">ELETRICA</a>
-                  </li>
-                </li>
-                <li id="menu-item-1315">
-                  <a href="categoria.html" class="has-icon">A BAFO PE BAIXO</a>
-                </li>
-              </li>
-              <li id="menu-item-1315">
-                <a href="categoria.html" class="has-icon">INOX VERTIVAL</a>
-              </li>
-            </li>
-            <li id="menu-item-1315">
-              <a href="categoria.html" class="has-icon">GAUCHINHA</a>
-            </li>
-          </ul>
+            </ul>
         </li>
         <li id="menu-item-1301" class="has-dropdown not-click">
           <a href="subcategoria.html" class="has-icon">FULCAN</a>
@@ -97,16 +72,7 @@
             </li>
             <li class="parent-link hide-for-medium-up"><a class="parent-link js-generated" href="catalogo.html">Estilo II</a></li>
             <li id="menu-item-1319">
-              <a href="categoria.html" class="" ass="has-icon">INOX</a>
-            </li>
-            <li id="menu-item-1320">
-              <a href="categoria.html" class="has-icon">REDONDO</a>
-            </li>
-            <li id="menu-item-1321">
-              <a href="categoria.html" class="has-icon">RETANGULAR</a>
-            </li>
-            <li id="menu-item-1321">
-              <a href="categoria.html" class="has-icon">ESMALTADO</a>
+              <a href="categoria.html" class="" ass="has-icon">CATEGORIAS</a>
             </li>
           </ul>
         </li>
