--- a/linhasdeprodutos.html
+++ b/linhasdeprodutos.html
@@ -23,7 +23,7 @@
 
     <!-- Start Header -->
 
-      <header class="l-header creative-layout">
+  <header class="l-header creative-layout">
     <div class="top-bar-container contain-to-grid sticky">
       <nav class="top-bar" data-topbar="">
         <ul class="title-area">
@@ -42,50 +42,25 @@
           <div class="menu-main-menu-container">  
             <ul id="menu-main-menu" class="menu">
               <li id="menu-item-1299" class="has-dropdown not-click">
-                <a href="#" class="has-icon">LINHA DE PRODUTOS</a>
+                <a href="linhasdeprodutos.html" class="has-icon">LINHA DE PRODUTOS</a>
                 <ul class="sub-menu dropdown">
                   <li class="title back js-generated"><h5><a href="javascript:void(0)">Voltar</a></h5></li><li class="parent-link hide-for-medium-up"><a class="parent-link js-generated" href="catalogo.html">Catalogo</a></li>
                   <li id="menu-item-1300" class="has-dropdown not-click">
-                    <a href="catalogo.html" class="has-icon">ALFASUPORTEL</a>
+                    <a href="subcategoria.html" class="has-icon">ALFASUPORTEL</a>
                     <ul class="sub-menu dropdown"><li class="title back js-generated"><h5><a href="javascript:void(0)">Back</a></h5></li><li class="parent-link hide-for-medium-up"><a class="parent-link js-generated" href="#">Estilo I</a></li>
                       <li id="menu-item-1316">
-                        <a href="item_produto.html" class="has-icon">ASPECT II</a>
+                        <a href="categoria.html" class="has-icon">CATEGORIAS</a>
                       </li>
                       <li id="menu-item-1316">
                         <ul class="sub-menu dropdown"><li class="title back js-generated"><h5><a href="javascript:void(0)">Back</a></h5>
                         </li>                    
-                        <a href="item_produto.html" class="has-icon">ASPECT III</a>
+                        <a href="categoria.html" class="has-icon">CATEGORIAS</a>
                       </ul>
                     </li>
-                    <li id="menu-item-1315">
-                      <a href="item_produto.html" class="has-icon">BRASIL570</a>
-                    </li>
-                    <li id="menu-item-1315">
-                      <a href="item_produto.html" class="has-icon">CARVÃO A BAFO PÉ ALTO</a>
-                    </li>
-                    <li id="menu-item-1315">
-                      <a href="item_produto.html" class="has-icon">ESPETINHO</a>
-                    </li>
-                  </li>
-                  <li id="menu-item-1315">
-                    <a href="item_produto.html" class="has-icon">ELETRICA</a>
-                  </li>
-                </li>
-                <li id="menu-item-1315">
-                  <a href="item_produto.html" class="has-icon">A BAFO PE BAIXO</a>
-                </li>
-              </li>
-              <li id="menu-item-1315">
-                <a href="item_produto.html" class="has-icon">INOX VERTIVAL</a>
-              </li>
-            </li>
-            <li id="menu-item-1315">
-              <a href="item_produto.html" class="has-icon">GAUCHINHA</a>
-            </li>
-          </ul>
+            </ul>
         </li>
         <li id="menu-item-1301" class="has-dropdown not-click">
-          <a href="catalogo.html" class="has-icon">FULCAN</a>
+          <a href="subcategoria.html" class="has-icon">FULCAN</a>
           <ul class="sub-menu dropdown">
             <li class="title back js-generated">
               <h5>
@@ -94,16 +69,7 @@
             </li>
             <li class="parent-link hide-for-medium-up"><a class="parent-link js-generated" href="catalogo.html">Estilo II</a></li>
             <li id="menu-item-1319">
-              <a href="item_produto.html" class="" ass="has-icon">INOX</a>
-            </li>
-            <li id="menu-item-1320">
-              <a href="item_produto.html" class="has-icon">REDONDO</a>
-            </li>
-            <li id="menu-item-1321">
-              <a href="item_produto.html" class="has-icon">RETANGULAR</a>
-            </li>
-            <li id="menu-item-1321">
-              <a href="item_produto.html" class="has-icon">ESMALTADO</a>
+              <a href="categoria.html" class="" ass="has-icon">CATEGORIAS</a>
             </li>
           </ul>
         </li>
