--- a/produtos.html
+++ b/produtos.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html lang="pt-br" ng-app="alfasuportel">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-    <title>AlfaSuportel Churrasqueiras Frigideiras Grelhas</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700,800">
-    <link rel="stylesheet" href="stylesheets/owl.carousel.css">
-    <link rel="stylesheet" href="stylesheets/owl.theme.css">
-    <link rel="stylesheet" href="stylesheets/animate.css">
-    <link rel="stylesheet" href="stylesheets/swiper.min.css">
-    <link rel="stylesheet" href="stylesheets/font-awesome/font-awesome.min.css">
-    <link rel="stylesheet" href="stylesheets/app.css">
-    <link rel="stylesheet" href="stylesheets/custom-style.css">
-    <link rel="stylesheet" href="stylesheets/header.css">
-    <link rel="icon" href="images/logo/logo alfa suportel .png" width="140" height="140">
-    <script src="bower_components/angular/angular.js"></script>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="IE=Edge">
+  <title>AlfaSuportel Churrasqueiras Frigideiras Grelhas</title>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700,800">
+  <link rel="stylesheet" href="stylesheets/owl.carousel.css">
+  <link rel="stylesheet" href="stylesheets/owl.theme.css">
+  <link rel="stylesheet" href="stylesheets/animate.css">
+  <link rel="stylesheet" href="stylesheets/swiper.min.css">
+  <link rel="stylesheet" href="stylesheets/font-awesome/font-awesome.min.css">
+  <link rel="stylesheet" href="stylesheets/app.css">
+  <link rel="stylesheet" href="stylesheets/custom-style.css">
+  <link rel="stylesheet" href="stylesheets/header.css">
+  <link rel="icon" href="images/logo/logo alfa suportel .png" width="140" height="140">
+  <script src="bower_components/angular/angular.js"></script>
 
-  </head>
+</head>
 <body>
 
   <!-- Start Header -->
@@ -37,138 +37,68 @@
             <a href="#"><span>Menu</span></a>
           </li>
         </ul>
-  <section class="creative top-bar-section right">
-    <div class="menu-main-menu-container">  
-      <ul id="menu-main-menu" class="menu">
-        <li id="menu-item-1299" class="has-dropdown not-click">
-            <a href="#" class="has-icon">PRODUTOS</a>
-            <ul class="sub-menu dropdown">
-              <li class="title back js-generated"><h5><a href="javascript:void(0)">Voltar</a></h5></li><li class="parent-link hide-for-medium-up"><a class="parent-link js-generated" href="catalogo.html">Catalogo</a></li>
-              <li id="menu-item-1300" class="has-dropdown not-click">
-                <a href="catalogo.html" class="has-icon">CHURRASQUEIRAS</a>
-                <ul class="sub-menu dropdown"><li class="title back js-generated"><h5><a href="javascript:void(0)">Back</a></h5></li><li class="parent-link hide-for-medium-up"><a class="parent-link js-generated" href="#">Estilo I</a></li>
-                  <li id="menu-item-1316">
-                    <a href="item_produto.html" class="has-icon">ASPECT II</a>
-                  </li>
-                  <li id="menu-item-1316">
-                    <a href="item_produto.html" class="has-icon">ASPECT III</a>
-                  </li>
-                  <li id="menu-item-1315">
-                    <a href="item_produto.html" class="has-icon">BRASIL570</a>
-                  </li>
-                   <li id="menu-item-1315">
-                    <a href="item_produto.html" class="has-icon">CARVÃO A BAFO PÉ ALTO</a>
-                  </li>
-                   <li id="menu-item-1315">
-                    <a href="item_produto.html" class="has-icon">ESPETINHO</a>
-                  </li>
-                  </li>
-                   <li id="menu-item-1315">
-                    <a href="item_produto.html" class="has-icon">ELETRICA</a>
-                  </li>
-                  </li>
-                   <li id="menu-item-1315">
-                    <a href="item_produto.html" class="has-icon">A BAFO PE BAIXO</a>
-                  </li>
-                  </li>
-                   <li id="menu-item-1315">
-                    <a href="item_produto.html" class="has-icon">INOX VERTIVAL</a>
-                  </li>
-                  </li>
-                   <li id="menu-item-1315">
-                    <a href="item_produto.html" class="has-icon">GAUCHINHA</a>
-                  </li>
-                </ul>
-              </li>
-              <li id="menu-item-1301" class="has-dropdown not-click">
-                <a href="catalogo.html" class="has-icon">GRELHAS</a>
+        <section class="creative top-bar-section right">
+          <div class="menu-main-menu-container">  
+            <ul id="menu-main-menu" class="menu">
+              <li id="menu-item-1299" class="has-dropdown not-click">
+                <a href="linhasdeprodutos.html" class="has-icon">LINHA DE PRODUTOS</a>
                 <ul class="sub-menu dropdown">
-                  <li class="title back js-generated">
-                    <h5>
-                      <a href="javascript:void(0)">Back</a>
-                    </h5>
-                  </li>
-                  <li class="parent-link hide-for-medium-up"><a class="parent-link js-generated" href="catalogo.html">Estilo II</a></li>
-                  <li id="menu-item-1319">
-                    <a href="item_produto.html" class="" ass="has-icon">INOX</a>
-                  </li>
-                  <li id="menu-item-1320">
-                    <a href="item_produto.html" class="has-icon">REDONDO</a>
-                  </li>
-                  <li id="menu-item-1321">
-                    <a href="item_produto.html" class="has-icon">RETANGULAR</a>
-                  </li>
-                  <li id="menu-item-1321">
-                    <a href="item_produto.html" class="has-icon">ESMALTADO</a>
-                  </li>
-                </ul>
-              </li>
-              <li id="menu-item-1302" class="has-dropdown not-click">
-                <a href="catalogo.html" class="has-icon">ESPETO</a>
-                <ul class="sub-menu dropdown "><li class="title back js-generated"><h5><a href="javascript:void(0)">Back</a></h5></li><li class="parent-link hide-for-medium-up"><a class="parent-link js-generated" href="catalogo.html"> Catalogo unico</a></li>
-                  <li id="menu-item-1303">
-                    <a href="item_produto.html" class="has-icon">Catalogo unico</a>
-                  </li>
-                </ul>
-              </li>
-              <li id="menu-item-1302" class="has-dropdown not-click">
-                <a href="catalogo.html" class="has-icon">FRIGIDEIRA A GAS</a>
-                <ul class="sub-menu dropdown "><li class="title back js-generated"><h5><a href="javascript:void(0)">Back</a></h5></li><li class="parent-link hide-for-medium-up"><a class="parent-link js-generated" href="catalogo.html"> Catalogo unico</a></li>
-                  <li id="menu-item-1303">
-                    <a href="item_produto.html" class="has-icon">Catalogo unico</a>
-                  </li>
-                </ul>
-              </li>
-              <li id="menu-item-1302" class="has-dropdown not-click">
-                <a href="catalogo.html" class="has-icon">CHAPEIRA</a>
-                <ul class="sub-menu dropdown "><li class="title back js-generated"><h5><a href="javascript:void(0)">Back</a></h5></li><li class="parent-link hide-for-medium-up"><a class="parent-link js-generated" href="catalogo.html"> Catalogo unico</a></li>
-                  <li id="menu-item-1303">
-                    <a href="item_produto.html" class="has-icon">Catalogo unico</a>
-                  </li>
-                </ul>
-              </li>
-              <li id="menu-item-1302" class="has-dropdown not-click">
-                <a href="catalogo.html" class="has-icon">GRILLS</a>
-                <ul class="sub-menu dropdown "><li class="title back js-generated"><h5><a href="javascript:void(0)">Back</a></h5></li><li class="parent-link hide-for-medium-up"><a class="parent-link js-generated" href="catalogo.html"> Catalogo unico</a></li>
-                  <li id="menu-item-1303">
-                    <a href="item_produto.html" class="has-icon">Catalogo unico</a>
-                  </li>
-                </ul>
-              </li>
-              <li id="menu-item-1302" class="has-dropdown not-click">
-                <a href="catalogo.html" class="has-icon">FOGÕES</a>
-                <ul class="sub-menu dropdown "><li class="title back js-generated"><h5><a href="javascript:void(0)">Back</a></h5></li><li class="parent-link hide-for-medium-up"><a class="parent-link js-generated" href="catalogo.html"> Catalogo unico</a></li>
-                  <li id="menu-item-1303">
-                    <a href="item_produto.html" class="has-icon">Catalogo unico</a>
-                  </li>
-                </ul>
-              </li>
+                  <li class="title back js-generated"><h5><a href="javascript:void(0)">Voltar</a></h5></li><li class="parent-link hide-for-medium-up"><a class="parent-link js-generated" href="catalogo.html">Catalogo</a></li>
+                  <li id="menu-item-1300" class="has-dropdown not-click">
+                    <a href="subcategoria.html" class="has-icon">ALFASUPORTEL</a>
+                    <ul class="sub-menu dropdown"><li class="title back js-generated"><h5><a href="javascript:void(0)">Back</a></h5></li><li class="parent-link hide-for-medium-up"><a class="parent-link js-generated" href="#">Estilo I</a></li>
+                      <li id="menu-item-1316">
+                        <a href="categoria.html" class="has-icon">CATEGORIAS</a>
+                      </li>
+                      <li id="menu-item-1316">
+                        <ul class="sub-menu dropdown"><li class="title back js-generated"><h5><a href="javascript:void(0)">Back</a></h5>
+                        </li>                    
+                        <a href="categoria.html" class="has-icon">CATEGORIAS</a>
+                      </ul>
+                    </li>
             </ul>
-          </li>
-        <li id="menu-item-1295" class="has-dropdown not-click">
-          <a href="catalogo.html" class="has-icon">PAGINAS</a>
-          <ul class="sub-menu dropdown"><li class="title back js-generated"><h5><a href="javascript:void(0)">Voltar</a></h5></li><li class="parent-link hide-for-medium-up"><a class="parent-link js-generated" href="catalogo.html">PAGINAS</a></li>
-            <li id="menu-item-1309">
-              <a href="about-us.html" class="has-icon">QUEM SOMOS</a>
+        </li>
+        <li id="menu-item-1301" class="has-dropdown not-click">
+          <a href="subcategoria.html" class="has-icon">FULCAN</a>
+          <ul class="sub-menu dropdown">
+            <li class="title back js-generated">
+              <h5>
+                <a href="javascript:void(0)">Back</a>
+              </h5>
             </li>
-            <li id="menu-item-1308">
-              <a href="contact.html" class="has-icon">CONTATOS</a>
+            <li class="parent-link hide-for-medium-up"><a class="parent-link js-generated" href="catalogo.html">Estilo II</a></li>
+            <li id="menu-item-1319">
+              <a href="categoria.html" class="" ass="has-icon">CATEGORIAS</a>
             </li>
           </ul>
-          
+        </li>
+
+      </ul>
+    </li>
+    <li id="menu-item-1295" class="has-dropdown not-click">
+      <a href="catalogo.html" class="has-icon">PAGINAS</a>
+      <ul class="sub-menu dropdown"><li class="title back js-generated"><h5><a href="javascript:void(0)">Voltar</a></h5></li><li class="parent-link hide-for-medium-up"><a class="parent-link js-generated" href="catalogo.html">PAGINAS</a></li>
+        <li id="menu-item-1309">
+          <a href="about-us.html" class="has-icon">QUEM SOMOS</a>
         </li>
         <li id="menu-item-1308">
           <a href="contact.html" class="has-icon">CONTATOS</a>
         </li>
-        <li id="menu-item-1308">
-          <a href="contact.html" class="has-icon">TRABALHE CONOSCO</a>
-        </li>              
       </ul>
-    </div>
-  </section>
-      </nav>
-    </div>
-  </header>
+
+    </li>
+    <li id="menu-item-1308">
+      <a href="contact.html" class="has-icon">CONTATOS</a>
+    </li>
+    <li id="menu-item-1308">
+      <a href="contact.html" class="has-icon">TRABALHE CONOSCO</a>
+    </li>              
+  </ul>
+</div>
+</section>
+</nav>
+</div>
+</header>
 
 <!-- End Header -->
 
