--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 										<a href="subcategoria.html?id={{ item.id }}" ng-mouseover="loadSubCategorias(item)" class="has-icon">{{ item.descricao_categoria }}</a>
 										<ul class="sub-menu dropdown">
 											<li id="menu-item-1316" ng-repeat="item in subcategorias">
-												<a href="produtos.html?{{ item.id }}" class="has-icon">{{ item.descricao_categoria }}</a>
+													<a href="produtos.html?{{ item.id }}" class="has-icon">{{ item.descricao_categoria }}</a>
 											</li>
 										</ul>
 									</li>
@@ -59,7 +59,7 @@
 							</li>
 							<li id="menu-item-1295" class="has-dropdown not-click">
 								<a href="catalogo.html" class="has-icon">PAGINAS</a>
-								<ul class="sub-menu dropdown"><li class="title back js-generated"><h5><a href="javascript:void(0)">Voltar</a></h5></li><li class="parent-link hide-for-medium-up"><a class="parent-link js-generated" href="catalogo.html">PAGINAS</a></li>
+								<ul class="sub-menu dropdown">
 									<li id="menu-item-1309">
 										<a href="about-us.html" class="has-icon">QUEM SOMOS</a>
 									</li>
@@ -67,17 +67,16 @@
 										<a href="contact.html" class="has-icon">CONTATOS</a>
 									</li>
 								</ul>
-
-						</li>
-						<li id="menu-item-1308">
-							<a href="contact.html" class="has-icon">CONTATOS</a>
-						</li>
-						<li id="menu-item-1308">
-							<a href="contact.html" class="has-icon">TRABALHE CONOSCO</a>
-						</li>              
-					</ul>
-				</div>
-			</section>
+							</li>
+							<li id="menu-item-1308">
+								<a href="contact.html" class="has-icon">CONTATOS</a>
+							</li>	
+							<li id="menu-item-1308">
+								<a href="contact.html" class="has-icon">TRABALHE CONOSCO</a>
+							</li>              
+						</ul>
+					</div>
+				</section>
 		</nav>
 	</div>
 </header>
